--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Daniel Żak - Junior Web Developer & Muzyk </title>
     <link href="css/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
-    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJXXd88nSArGas929GiUdBYvrFP8Zb8-BHOw&s">
+    <link rel="icon" type="image/png"
+        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJXXd88nSArGas929GiUdBYvrFP8Zb8-BHOw&s">
 
 
 </head>
@@ -44,12 +45,18 @@
         mi rozwijać się w świecie IT.
         </p>
 
-        <h2 class="subHeader">
-            Przykładowa interakcja w JS-sie.
-        </h2>
-        <p>
-            <button class="changeBackground">Zmień tło strony</button>
-        </p>
+
+        <h3 class="subHeader">Testowy nagłówek</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam perferendis natus. Eum optio culpa
+            quos, itaque ratione totam enim, cumque nostrum quam saepe explicabo quis molestias suscipit consequuntur
+            fugiat!
+            </p>
+            <h2 class="subHeader">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatem tempore.
+            </h2>
+            <p>
+                <button class="changeBackground">Zmień tło strony</button>
+            </p>
 
 </body>
 
