changes text in a test subHeader

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam perferendis natus. Eum optio culpa
             quos, itaque ratione totam enim, cumque nostrum quam saepe explicabo quis molestias suscipit consequuntur
             fugiat!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem quae velit ratione?
             </p>
             <h2 class="subHeader">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatem tempore.
