changes text in a test

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem quae velit ratione?
             </p>
             <h2 class="subHeader">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatem tempore.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatem tempore. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Magnam saepe optio perspiciatis!
             </h2>
             <p>
                 <button class="changeBackground">Zmień tło strony</button>
