image meta property improvement

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Żak - Junior Web Developer & Muzyk </title>
-    <meta property="og:image" content="images/share.jpg">
+    <meta property="og:image" content="https://github.com/filipino214/homepage/tree/main/images/share.jpg">
     <link href="css/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="icon" type="image/png"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJXXd88nSArGas929GiUdBYvrFP8Zb8-BHOw&s">
-
-
 </head>
-
 
 <body class="container">
     <h1 class="header">Daniel Żak</h1>
