website icon added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta property="og:image" content="images/share.png">
     <link href="css/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
-    <link rel="icon" type="image/png"
-        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJXXd88nSArGas929GiUdBYvrFP8Zb8-BHOw&s">
+    <link rel="icon" href="images/music.jpg">
 </head>
 
 <body class="container">
