--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Żak - Junior Web Developer & Muzyk </title>
-    <meta property="og:image" content="images/share1.png">
+    <meta property="og:image" content="images/homepage.png">
     <link href="css/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="icon" href="images/music.jpg">
