adding a function to javascript

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
 
         <p>
-            <button class="changeBackground">Zmień tło strony</button>
+            <button class="js-changeBackground">Zmień tło strony</button>
         </p>
 
 </body>
